misc/operator/e2e/tests/tls-rolling-deadlock-regression/cluster.yaml
apiVersion: ledger-next.formance.com/v1alpha1
kind: Cluster
metadata:
  name: tls-deadlock
spec:
  replicas: 3
  image:
    repository: ledger
    tag: e2e
    pullPolicy: Never
