misc/operator/e2e/tests/tls-rolling-deadlock-regression/ledgerservice.yaml
apiVersion: ledger.formance.com/v1alpha1
kind: LedgerService
metadata:
  name: tls-deadlock
spec:
  replicas: 3
  image:
    repository: ledger
    tag: e2e
    pullPolicy: Never
